# simple-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 258131defca3_add_data_timestamp.py  999e2dc16df6_add_user_s_allowed_scopes.py  bd7bb3dfe3a8_add_role_collumn_to_users.py  f6aa95f76f35_initial_migration.py
app/: main.py  models.py  test.py
app/core/: config.py  database.py  logging.py  telemetry.py
app/routes/: admin.py  user.py
app/routes/admin/: __init__.py  users.py  utils.py
app/schemas/: token.py  user.py
app/utils/: auth.py  telemetry.py
test/: test_main.py  test_user.py  utils.py
