[project]
name = "simpleapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "amane", email = "atapradana.work@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic-settings>=2.5.2",
    "pyjwt>=2.9.0",
    "pymysql>=1.1.1",
    "pwdlib[bcrypt]>=0.2.1",
    "python-ulid>=2.7.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "fluent-logger>=0.11.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]
